k8s-manifests/45-tailscale-proxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tailscale-proxy
  namespace: minecraft
  labels:
    app: tailscale-proxy
spec:
  selector:
    matchLabels:
      app: tailscale-proxy
  template:
    metadata:
      labels:
        app: tailscale-proxy
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: salad-playground
      containers:
        - name: proxy
          image: nginx:alpine
          ports:
            - name: mc-tcp
              containerPort: 25565
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: tailscale-proxy-config
