k8s-manifests/netdata-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
spec:
  selector:
    matchLabels:
      app: netdata
  template:
    metadata:
      labels:
        app: netdata
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: netdata
          image: netdata/netdata:latest
          ports:
            - name: web
              containerPort: 19999
              protocol: TCP
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
            - name: os-release
              mountPath: /host/etc/os-release
              readOnly: true
            - name: config
              mountPath: /etc/netdata
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: os-release
          hostPath:
            path: /etc/os-release
        - name: config
          emptyDir: {}
