k8s-manifests/elastic-fleet.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-server-wg
  namespace: elastic-system
  labels:
    app.kubernetes.io/component: fleet-server
    app.kubernetes.io/part-of: home-lab-monitoring
spec:
  type: LoadBalancer
  ports:
    - port: 8220
      protocol: TCP
      targetPort: 8220
  selector:
    common.k8s.elastic.co/type: agent
    agent.k8s.elastic.co/name: fleet-server
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
  namespace: elastic-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fleet.home.10.0.0.2.nip.io`)
      kind: Rule
      services:
        - name: fleet-server-wg
          port: 8220
