k8s-manifests/netdata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  namespace: netdata
  annotations:
    tailscale.com/hostname: netdata
spec:
  ingressClassName: tailscale
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
  tls:
    - hosts:
        - "netdata.manatee-ruffe.ts.net"
